added web content

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
+  <title>Tracking Time Oy</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
@@ -63,7 +63,7 @@
   <ul class="sidebar-nav">
     <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
     <li class="sidebar-brand">
-      <a href="#top" onclick=$("#menu-close").click();>Tracking Hours</a>
+      <a href="#top" onclick=$("#menu-close").click();>TrackingMan</a>
     </li>
     <li>
       <a href="#top" onclick=$("#menu-close").click();>Home</a>
@@ -89,8 +89,9 @@
 <!-- Header -->
 <header id="top" class="header">
   <div class="text-vertical-center">
-    <h1>Tracking Hours/h1>
-    <h3>The best app for companies</h3>
+    <h1>Employee time tracking and <br> estimation software</h1>
+    <h3>SECURE SOLUTIONS FOR MONEY AND TIME
+    </h3>
     <br>
     <a href="#about" class="btn btn-dark btn-lg">Read more</a>
   </div>
@@ -102,7 +103,10 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2>About us!</h2>
-        <p class="lead">Something to say.. <a target="_blank" href="">Click here!</a>.</p>
+        <p class="lead"> We are TrackingMan. A Time Tracking company from Finland, the land of engineers, midnight sun, and leading edge digital time tracking. We help companies and enterprises to track and estimate employees working time.
+          <br>TrackingMan enhance your project management by easy time tracking. Measure your teamwork, stay within estimates, engage with flexible reporting. <a target="_blank" href="">Click here!</a>.
+        </p>
+
       </div>
     </div>
     <!-- /.row -->
@@ -126,9 +130,9 @@
                                 <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                             </span>
               <h4>
-                <strong>Service Name</strong>
+                <strong>Cloud-based and mobile</strong>
               </h4>
-              <p>Description</p>
+              <p>Log in from anywhere; track time and view data directly.</p>
               <a href="#" class="btn btn-light">Learn More</a>
             </div>
           </div>
@@ -139,9 +143,9 @@
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i>
                             </span>
               <h4>
-                <strong>Service Name</strong>
+                <strong>Professional Services Automation</strong>
               </h4>
-              <p>Description...</p>
+              <p>Optimize your professional services organization by tracking and improving cash flow and utilization, identify and reduce revenue leakage and create real-time profitability forecasts.</p>
               <a href="#" class="btn btn-light">Learn More</a>
             </div>
           </div>
@@ -152,9 +156,9 @@
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i>
                             </span>
               <h4>
-                <strong>Service Name</strong>
+                <strong>Workforce Management</strong>
               </h4>
-              <p>Description...</p>
+              <p>Conquer people costs and labor compliance, accelerate organizational productivity, and manage source to gross pay with simplified management and real-time visibility into workforce availability.</p>
               <a href="#" class="btn btn-light">Learn More</a>
             </div>
           </div>
@@ -165,9 +169,10 @@
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i>
                             </span>
               <h4>
-                <strong>Service Name</strong>
+                <strong>Project Portfolio Management</strong>
               </h4>
-              <p>Description...</p>
+              <p>Deliver profitable and timely project completion with real-time visibility into project performance and progress, easy schedule and cost management and optimized resource management.
+              </p>
               <a href="#" class="btn btn-light">Learn More</a>
             </div>
           </div>
@@ -185,6 +190,9 @@
 <aside class="callout">
   <div class="text-vertical-center">
     <h1>Our slogan</h1>
+    <p>
+     <h3> Easy, intelligent time tracking</h3>
+    </p>
   </div>
 </aside>
 
@@ -240,9 +248,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h3>You have 2 options.</h3>
-        <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-        <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
+        <h3>Reach Us</h3>
+        <a href="#" class="btn btn-lg btn-light">Book an appointment</a>
+        <a href="#" class="btn btn-lg btn-dark">Report</a>
       </div>
     </div>
   </div>
@@ -262,28 +270,28 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-10 col-lg-offset-1 text-center">
-        <h4><strong>Tracking Hours OY</strong>
+        <h4><strong>TrackingMan OY</strong>
         </h4>
         <p>Kotkantie 1
-          <br>90150, Oulu, Finlland</p>
+          <br>90150, Oulu, Finland</p>
         <ul class="list-unstyled">
           <li><i class="fa fa-phone fa-fw"></i> (+358) 465764554</li>
-          <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">haha@aamk.fi
+          <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">trackingMan@oamk.fi
         </ul>
         <br>
         <ul class="list-inline">
           <li>
-            <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+            <a href="www.facebook.com"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+            <a href="www.twitter.com"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
+            <a href="www.dribble.com"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
           </li>
         </ul>
         <hr class="small">
-        <p class="text-muted">Copyright &copy; Oiva.fi</p>
+        <p class="text-muted">Copyright &copy; TrackingManOy.fi</p>
       </div>
     </div>
   </div>
